--- a/index.html
+++ b/index.html
@@ -8,6 +8,79 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-tea-cozy-logo.png"></li>
+            <li>Mission</li>
+            <li>Featured Tea</li>
+            <li>Locations</li>
+        </ul>
+    </nav>
+    <section>
+     <div class="header">
+        <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-mission-background.jpg">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    </div>
+</section>
+<section>
+    <div class="month">
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
+        <div class="container">
+        <figure>
+            <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-berryblitz.jpg">
+            <figcaption>Fall Berry Blitz Tea</figcaption>
+        </figure>
+        <figure>
+            <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-spiced-rum.jpg">
+            <figcaption>Spiced Rum Tea</figcaption>
+        </figure>
+        <figure>
+            <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-donut.jpg">
+            <figcaption>Seasonal Donuts</figcaption>
+        </figure>
+        <figure>
+            <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-myrtle-ave.jpg">
+            <figcaption>Myrtle Ave Tea</figcaption>
+        </figure>
+        <figure>
+            <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-bedford-bizarre.jpg">
+            <figcaption>Bedford Bizarre Tea</figcaption>
+        </figure>
+            
+    </div>
+    </div>
+    </section> 
+    <section>
+        <div class="locations">
+            <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-locations-background.jpg">
+            <h2>Locations</h2>
+            <div class="card">
+                <div class="card-container">
+                   <h3>Downtown</h3>
+                   <p>384 West4th St<br>Suite 108<br>Portland, Maine</p> 
+                </div>
+                <div class="card-container">
+                   <h3>East Bayside</h3>
+                   <p>3422 Phisherman's Avenue<br>(Northwest Corner)<br>Portland, Maine</p> 
+                </div>
+                <div class="card-container">
+                   <h3>Oakdale</h3>
+                   <p>515 Crescent Avenue<br>Second Floor<br>Portland, Maine</p> 
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <footer>
+        <div class="footer">
+            <h2>The Tea Cozy</h2>
+            <h5>contact@theteacozy.com</h5>
+            <h5>917-555-8904</h5>
+            <h5>copyright The Tea Cozy 2023</h5>
+        </div>
+    </footer>
     
 </body>
 </html>
