position monthly teas with flexbox

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <nav>
+    <nav class="nav">
         <ul>
             <li><img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-tea-cozy-logo.png"></li>
             <li>Mission</li>
@@ -27,28 +27,30 @@
     <div class="month">
         <h2>Tea of the Month</h2>
         <h4>What's Steeping at The Tea Cozy?</h4>
-        <div class="container">
-        <figure>
+        <div class="month-container">
+        <div class="tea">
+        <figure class="square">
             <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-berryblitz.jpg">
             <figcaption>Fall Berry Blitz Tea</figcaption>
         </figure>
-        <figure>
+        <figure class="square">
             <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-spiced-rum.jpg">
             <figcaption>Spiced Rum Tea</figcaption>
         </figure>
-        <figure>
+        <figure class="square">
             <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-donut.jpg">
             <figcaption>Seasonal Donuts</figcaption>
         </figure>
-        <figure>
+        <figure class="square">
             <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-myrtle-ave.jpg">
             <figcaption>Myrtle Ave Tea</figcaption>
         </figure>
-        <figure>
+        <figure class="square">
             <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-bedford-bizarre.jpg">
             <figcaption>Bedford Bizarre Tea</figcaption>
         </figure>
             
+    </div>
     </div>
     </div>
     </section> 
