position locations on top of image

--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
     </section> 
     <section>
         <div class="locations">
-            <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-locations-background.jpg">
-            <h2>Locations</h2>
-            <div class="card">
-                <div class="card-container">
+            
+            <h2 class="location-header">Locations</h2>
+            <div class="card-container">
+                <div class="card">
                    <h3>Downtown</h3>
                    <p>384 West4th St<br>Suite 108<br>Portland, Maine</p> 
                 </div>
-                <div class="card-container">
+                <div class="card">
                    <h3>East Bayside</h3>
                    <p>3422 Phisherman's Avenue<br>(Northwest Corner)<br>Portland, Maine</p> 
                 </div>
-                <div class="card-container">
+                <div class="card">
                    <h3>Oakdale</h3>
                    <p>515 Crescent Avenue<br>Second Floor<br>Portland, Maine</p> 
                 </div>
