--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <nav class="nav">
+        <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-tea-cozy-logo.png">
         <ul>
-            <li><img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-tea-cozy-logo.png"></li>
             <li>Mission</li>
             <li>Featured Tea</li>
             <li>Locations</li>
@@ -18,9 +18,10 @@
     </nav>
     <section>
      <div class="header">
-        <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-mission-background.jpg">
+        <div class="header-text">
         <h2>Our Mission</h2>
         <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    </div>
     </div>
 </section>
 <section>
@@ -78,9 +79,9 @@
     <footer>
         <div class="footer">
             <h2>The Tea Cozy</h2>
-            <h5>contact@theteacozy.com</h5>
-            <h5>917-555-8904</h5>
-            <h5>copyright The Tea Cozy 2023</h5>
+            <h5 id="email">contact@theteacozy.com</h5>
+            <h5 id="phone">917-555-8904</h5>
+            <h5 id="copyright">copyright The Tea Cozy 2023</h5>
         </div>
     </footer>
     
